--- a/javascript-labs/08-09-apis_requests/apis.html
+++ b/javascript-labs/08-09-apis_requests/apis.html
@@ -6,8 +6,6 @@
 
     </head>
     <body id="body">
-        <br>
-        <br>
         <h1>COVID-19 Country Statistics</h1>
         <br>
         <img src="image1170x530cropped.jpg" height="320" width="750">
@@ -21,11 +19,11 @@
         </div>
 
         <p id=country>Country</p>
+        <p><label><div id="flag"></div></label></p>
         <p><label>Name: <label id="country-name"></label></label></p>
         <p><label>Region: <label id="region-name"></label></label></p>
         <p><label>Subregion: <label id="subregion-name"></label></label></p>
         <p><label>Population: <label id="population"></label></label></p>
-        <p><label>Flags: <a href="url" id="flag"></a></label></p>
         <p><label>Maps: <a href="url" id="maps"></a></label></p>
         <br>
         <br>
